[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools-scm>=9",
    "setuptools>=80",
]

[project]
authors = [
    { email = "michimussato@gmail.com", name = "Michael Mussato" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: OpenStudioLandscapes",
    "Programming Language :: Python",
]
dependencies = [
    "PyYAML",
    "dagster==1.9.11",
    "docker-compose-graph @ git+https://github.com/michimussato/docker-compose-graph.git@v1.0.0",
    "email-validator",
    "gitpython",
    "importlib-metadata; python_version<\"3.8\"",
    "snakemd",
]
description = "Syncthing Feature for OpenStudioLandscapes"
dynamic = [
    "version",
]
license-files = [
    "LICENSE.txt",
]
maintainers = [
    { email = "michimussato@gmail.com", name = "Michael Mussato" },
]
name = "OpenStudioLandscapes-Syncthing"
requires-python = ">=3.11"

[project.entry-points]

[project.optional-dependencies]
coverage = [
    "coverage",
    "pytest",
]
dev = [
    "OpenStudioLandscapes-Syncthing[coverage]",
    "OpenStudioLandscapes-Syncthing[lint]",
    "OpenStudioLandscapes-Syncthing[nox]",
    "OpenStudioLandscapes-Syncthing[readme]",
    "OpenStudioLandscapes-Syncthing[sbom]",
    "OpenStudioLandscapes-Syncthing[testing]",
]
graphviz = [
    "graphviz",
    "pipdeptree",
]
lint = [
    "OpenStudioLandscapes @ git+https://github.com/michimussato/OpenStudioLandscapes.git",
    "black",
    "isort",
    "pre-commit",
    "pylint",
]
nox = [
    "OpenStudioLandscapes @ git+https://github.com/michimussato/OpenStudioLandscapes.git",
    "OpenStudioLandscapes-Syncthing[testing]",
    "nox",
]
pyproject = [
    "OpenStudioLandscapesUtil-VersionBumper @ git+https://github.com/michimussato/OpenStudioLandscapesUtil-VersionBumper.git",
]
readme = [
    "OpenStudioLandscapes @ git+https://github.com/michimussato/OpenStudioLandscapes.git",
    "OpenStudioLandscapesUtil-ReadmeGenerator @ git+https://github.com/michimussato/OpenStudioLandscapesUtil-ReadmeGenerator.git",
]
sbom = [
    "OpenStudioLandscapes @ git+https://github.com/michimussato/OpenStudioLandscapes.git",
    "OpenStudioLandscapes-Syncthing[graphviz]",
    "cyclonedx-bom",
]
testing = [
    "pytest",
    "pytest-cov",
    "setuptools",
]

[project.readme]
content-type = "text/markdown; charset=UTF-8"
file = "README.md"

[project.urls]
Homepage = "https://github.com/michimussato/OpenStudioLandscapes-Syncthing"

[tool.dagster]
code_location_name = "OpenStudioLandscapes-Syncthing"
module_name = "OpenStudioLandscapes.Syncthing.definitions"

[tool.setuptools]
include-package-data = true
packages = [
    "OpenStudioLandscapes.Syncthing",
]
platforms = [
    "Linux",
]

[tool.setuptools.package-dir]
"" = "src"
