[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools-scm>=9",
    "setuptools>=80",
]

[project]
authors = [
    { email = "michimussato@gmail.com", name = "Michael Mussato" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: OpenStudioLandscapes",
    "Programming Language :: Python",
]
dependencies = [
    "PyYAML",
    "dagster==1.9.11",
    "docker-compose-graph @ git+https://github.com/michimussato/docker-compose-graph.git",
    "email-validator",
    "gitpython",
    "snakemd",
]
description = "Syncthing Feature for OpenStudioLandscapes"
dynamic = [
    "version",
]
license-files = [
    "LICENSE.txt",
]
maintainers = [
    { email = "michimussato@gmail.com", name = "Michael Mussato" },
]
name = "OpenStudioLandscapes-Syncthing"
requires-python = ">=3.11"

[project.entry-points]

[project.optional-dependencies]
dev = [
    "OpenStudioLandscapes-Syncthing[lint]",
    "OpenStudioLandscapes-Syncthing[readme]",
    "OpenStudioLandscapes-Syncthing[sbom]",
]
graphviz = [
    "graphviz",
    "pipdeptree",
]
lint = [
    "OpenStudioLandscapes-Syncthing[optional-base]",
    "black",
    "isort",
    "pre-commit",
    "pylint",
]
optional-base = [
    "OpenStudioLandscapes @ git+https://github.com/michimussato/OpenStudioLandscapes.git",
]
pyproject = [
    "OpenStudioLandscapesUtil-VersionBumper @ git+https://github.com/michimussato/OpenStudioLandscapesUtil-VersionBumper.git",
]
readme = [
    "OpenStudioLandscapes-Syncthing[optional-base]",
    "OpenStudioLandscapesUtil-ReadmeGenerator @ git+https://github.com/michimussato/OpenStudioLandscapesUtil-ReadmeGenerator.git",
]
sbom = [
    "OpenStudioLandscapes-Syncthing[graphviz]",
    "OpenStudioLandscapes-Syncthing[optional-base]",
    "cyclonedx-bom",
]

[project.readme]
content-type = "text/markdown; charset=UTF-8"
file = "README.md"

[project.urls]
Homepage = "https://github.com/michimussato/OpenStudioLandscapes-Syncthing"

[tool.dagster]
code_location_name = "OpenStudioLandscapes-Syncthing"
module_name = "OpenStudioLandscapes.Syncthing.definitions"

[tool.setuptools]
include-package-data = true
packages = [
    "OpenStudioLandscapes.Syncthing",
]
platforms = [
    "Linux",
]

[tool.setuptools.package-dir]
"" = "src"
